--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -42,6 +42,7 @@
 
 body {
 	overflow-x:hidden;
+	font-family: 'Roboto', sans-serif;
 }
 a:hover, a:focus {
     text-decoration:none;
@@ -55,17 +56,14 @@ li{
 	list-style:none;
 }
 h1,h2,h3,h4,h5,h6{
-	font-family:'Droid Sans', sans-serif;
 	color:#2d2d2d;
 }
 p{
-	font-family: 'Open Sans', sans-serif;
 	 color:#3d3d3d;
 	 line-height:32px;
 }
 	
 span{
-	font-family: 'Open Sans', sans-serif;
 	font-size:14px;
 }
 .out {
@@ -235,7 +233,6 @@ span{
 .right-bar{
 	float:right;
 	margin-top:12px;
-	font-family: 'Open Sans', sans-serif;
 }
 .left-bar ul  {
     display:block;
@@ -314,7 +311,6 @@ span{
 	border:none;
 }
 #navbar .nav > li > a {
-	font-family: 'Montserrat', sans-serif;
 	padding:0 0 8px 0;
 	transition: all 0.2s ease-out 0s;
 }
@@ -370,7 +366,6 @@ span{
 }
 .dropdown-menu > li > a {
 	transition: all 0.4s ease 0s;
-	font-family: 'Montserrat', sans-serif;
 }
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
 	background-color:#fff;
@@ -419,7 +414,6 @@ span{
 	border-radius: 3px;
     padding: 15px 50px;
 	font-size:14px !important;
-	font-family: 'Open Sans', sans-serif;
 	
 }
 .slider-button .view-btn a:hover,
@@ -465,13 +459,13 @@ span{
 	border-radius: 5px;
     padding: 15px 40px;
 	font-size:14px !important;
-	font-family: 'Open Sans', sans-serif;
 	color:#fff !important;
 	background-color:#09b9e5;  
 }
 .vacation-bg {
-
 	background-size:cover;
+	height: 115px;
+	margin-bottom: 10px;
 }
 .action-text {
 	float:left;
@@ -481,7 +475,6 @@ span{
 	color:#fff;
 }
 .action-text p{
-	font-family: 'Droid Sans', sans-serif;
 	letter-spacing:10px;
 	color:#fff;
 }
@@ -521,7 +514,6 @@ span{
 	background-color:rgba(0,0,0,0.36);
 	padding:14px 18px;
 	color:#fff;
-	font-family: 'Open Sans', sans-serif;
 	font-size:16px;
 }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
@@ -549,11 +541,9 @@ span{
 	min-height:44px;
 }
 .search-form .form-section label{
-	font-family: 'Droid Sans', sans-serif;
 	font-size:15px;
 }
-.search-form .form-section input, select{ 
-	font-family: "Open Sans",sans-serif;
+.search-form .form-section input, select{
 }
 .search-form label {
     margin-bottom: 22px;
@@ -586,7 +576,6 @@ span{
 
 }
 .form-inner .form-control::-moz-placeholder {
-	font-family: 'Open Sans', sans-serif;
 	color:#a8a8a8;
 }
 .search-btn {
@@ -889,7 +878,6 @@ span{
 }	
 .appartment-detail > li {
     display: inline-block;
-	font-family: 'Open Sans', sans-serif;
 	font-weight:bold;
 	font-size:15px;
 	padding:0 8px;
@@ -1005,7 +993,6 @@ span{
 .listing-name li a {
 	color:#acacac;
 	transition: all 0.4s ease-in-out 0s;
-	font-family: 'Open Sans', sans-serif;
 	font-weight:bold;
 }
 .listing-name > li a::before {
@@ -1022,7 +1009,7 @@ span{
     content: "";
     left: 0;
     position: absolute;
-    width: 100%;
+    /*width: 100%;*/
 	transition:all 0.4s ease-in 0s;
 }
 .listing-name li a:hover {
@@ -1034,7 +1021,7 @@ span{
     content: "";
     left: 0;
     position: absolute;
-    width:100%;
+    /*width:100%;*/
 }
 .listing-name .filter.active > a {
 	color:#2d2d2d;
@@ -1236,7 +1223,6 @@ span{
 	margin-right:30px;
 }
 .blog-text .time li a {
-	font-family: "Open Sans",sans-serif;
 	color:#a5a5a5;
 	font-size:16px;
 	
@@ -1373,7 +1359,6 @@ footer .contact li {
 	background-color:#2b4261;
 	text-align:center;
 	padding:20px 0px;
-	font-family: 'Montserrat', sans-serif;
 	margin-bottom:0;
 	color:#fff;
 }
@@ -1383,7 +1368,6 @@ footer .contact li {
 }
 .lower-footer a {
 	color:#fff;
-	font-family: 'Montserrat', sans-serif;
 }
 /*..............................agents-list-page..........................*/
 .page-name {
@@ -1412,7 +1396,7 @@ footer .contact li {
 }
 .tag-bar span {
 	font-size:12px;
-	font-family: 'Montserrat', sans-serif;
+
 	border-left:1px solid #bfbfbf;
 	padding-left:5px;
 	
@@ -1431,7 +1415,6 @@ footer .contact li {
 }
 .breadcrumb li a {
 	color:#7f7f7f;
-	font-family: 'Open Sans', sans-serif;
 }
 .breadcrumb .active a {
     color: #09b9e5;
@@ -1500,7 +1483,6 @@ footer .contact li {
 	margin-top:20px;
 }
 .agent-profile ul li {
-	font-family: 'Open Sans', sans-serif;
 }
 .agent-name {
 	display:inline-block;
@@ -1581,7 +1563,6 @@ footer .contact li {
 .full-profile-btn .see-more{
 	color:#09b9e5;
 	border-bottom:1px solid #09b9e5;
-	font-family: 'Open Sans', sans-serif;
 	 transition: all 0.4s ease 0s;
 }
 .agent-profile { 
@@ -1603,7 +1584,6 @@ footer .contact li {
 }
 
 .pagination li a {
-	font-family: 'Montserrat', sans-serif;
 	font-size:16px;
 	border:none;
 	color:#7f7f7f;
@@ -1794,7 +1774,6 @@ footer .contact li {
 .right-side-bar #slider-range .minvalue, 
 .right-side-bar #slider-range .maxvalue {
 	color:#8d8d8d;
-	font-family: 'Montserrat', sans-serif;
 	font-size:12px;
 }
 .right-side-bar #slider-range .minvalue,
@@ -1807,7 +1786,7 @@ input[type="checkbox"]:focus {
 	outline:none;
 }
 input[type="checkbox"] {
-	background:#a8a8a8a;
+	background: #a8a8a8a;
 	
 }
 .right-side-bar .form-group {
@@ -2194,8 +2173,7 @@ input[type="checkbox"] {
     width: 30px;
 }
 .post-area {
-	font-family: 'Montserrat', sans-serif;
-	border-bottom:1px solid #e1e1e1;
+	/*border-bottom:1px solid #e1e1e1;*/
 	padding-bottom:26px;
 	margin-bottom:30px;
 }
@@ -2204,7 +2182,6 @@ input[type="checkbox"] {
 }
 .post-area span {
 	font-size:12px;
-	font-family: 'Montserrat', sans-serif;
 }
 .best-place {
 	color:#09b9e5;
@@ -2264,11 +2241,9 @@ input[type="checkbox"] {
 .blog-text span{
 	color:#fa8526;
 	font-size:12px;
-	font-family: 'Montserrat', sans-serif;
 }
 .blog-text h4 {
 	font-size:18px;
-	font-family: 'Open Sans', sans-serif;
 	margin: 18px 0;
 }
 .blog-text .post-detail {
@@ -2649,7 +2624,6 @@ contact-info-rightbar {
 	color:#fff;
 }
 .tab-section .nav-stacked li span {
-	font-family: 'Montserrat', sans-serif;
 }
 .tab-section {
     padding-right: 50px;
@@ -3142,6 +3116,20 @@ contact-info-rightbar {
 		width: 1500px;
 	}
 }
+
+@media (max-width: 500px) and (min-width: 320px)
+{
+	.filter-list .property-text {
+		padding: 30px 0px !important;
+	}
+
+	.filter-list li {
+		padding: 0px !important;
+	}
+}
+
+
+
 
 	
 
